Fix email cut off.

--- a/Ayurveda/res/css/style.css
+++ b/Ayurveda/res/css/style.css
@@ -211,6 +211,10 @@ ul#nav li.current a, ul#nav li:hover a
   width: 240px;
 }
 
+.email {
+  letter-spacing: 0px;
+}
+
 #content
 { width: 680px;
   margin: 0 0 20px 0;
@@ -231,7 +235,7 @@ ul#nav li.current a, ul#nav li:hover a
   margin: 20px 0;
   width: 100%;
   height: 1px;
-  background: #4d2500;
+  background: #254d00;
 }
 
 footer
@@ -367,5 +371,5 @@ input, textarea
 
 .facilities-item-container {
   padding: 20px 0;
-  border-bottom: 1px solid #4d2500;
+  border-bottom: 1px solid #254d00;
 }
